--- a/sports.html
+++ b/sports.html
@@ -757,7 +757,7 @@
             <div class="cards-grid">
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://images.unsplash.com/photo-1577223625816-7546f13df25d?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Students playing football on school field">
+                        <img src="football.jpeg" alt="Students playing football on school field">
                     </div>
                     <div class="card-content">
                         <h3>Athletic Teams</h3>
@@ -767,7 +767,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://images.unsplash.com/photo-1549060279-7e168fce7090?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="School sports facilities including gym and fields">
+                        <img src="jump.jpeg" alt="School sports facilities including gym and fields">
                     </div>
                     <div class="card-content">
                         <h3>Modern Facilities</h3>
@@ -777,7 +777,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="https://images.unsplash.com/photo-1552674605-db6ffd8facb5?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Students receiving awards at sports ceremony">
+                        <img src="running.jpeg" alt="Students receiving awards at sports ceremony">
                     </div>
                     <div class="card-content">
                         <h3>Achievements & Awards</h3>
@@ -1017,7 +1017,7 @@
             <div class="facilities-grid">
                 <div class="facility-card">
                     <div class="facility-img">
-                        <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="School football field with artificial turf">
+                        <img src="football.jpeg" alt="School football field with artificial turf">
                     </div>
                     <div class="facility-overlay">
                         <h3>Main Football Field</h3>
@@ -1026,7 +1026,7 @@
                 </div>
                 <div class="facility-card">
                     <div class="facility-img">
-                        <img src="https://images.unsplash.com/photo-1546519638-68e109498ffc?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Indoor basketball court with polished floor">
+                        <img src="baku.jpg" alt="Indoor basketball court with polished floor">
                     </div>
                     <div class="facility-overlay">
                         <h3>Indoor Gymnasium</h3>
@@ -1230,6 +1230,17 @@
         });
         
         // Announce accessibility features on load
+        window.addEventListener('load', function() {
+            console.log('School Sports Page Loaded');
+            console.log('Accessibility Features:');
+            console.log('- Keyboard navigation support');
+            console.log('- Screen reader compatible');
+            console.log('- High contrast color scheme');
+            console.log('- WCAG 2.0 AA compliant');
+        });
+    </script>
+</body>
+</html>      // Announce accessibility features on load
         window.addEventListener('load', function() {
             console.log('School Sports Page Loaded');
             console.log('Accessibility Features:');
